<resources>
    <string name="app_name">Starter</string>

    <string name="npa" translatable="false">npa</string>
    <string name="hour" translatable="false">Hour</string>
    <string name="alarm" translatable="false">Alarm</string>
    <string name="minute" translatable="false">Minute</string>
    <string name="prefs" translatable="false">Preferences</string>
    <string name="channel_name" translatable="false">Channel</string>
    <string name="is_first_run" translatable="false">Is First Run</string>
    <string name="key_not_found" translatable="false">Key not found</string>
    <string name="channel_description" translatable="false">Description</string>
    <string name="publisher_id" translatable="false">pub-6412217023250030</string>
    <string name="house_ads" translatable="false">https://s3-us-west-2.amazonaws.com/thetaapps/houseAds/House+Ads.json</string>
    <string name="privacy_policy_url" translatable="false">https://s3-us-west-2.amazonaws.com/thetaapps/PrivacyPolicy.htm</string>

    <string name="app_id" translatable="false">ca-app-pub-6412217023250030~3570326572</string>
    <string name="native_ad_unit" translatable="false">ca-app-pub-6412217023250030/9137922994</string>
    <string name="banner_ad_unit" translatable="false">ca-app-pub-6412217023250030/5581821366</string>
    <string name="rewarded_ad_unit" translatable="false">ca-app-pub-6412217023250030/7633506345</string>
    <string name="exit_banner_ad_unit" translatable="false">ca-app-pub-6412217023250030/5581821366</string>
    <string name="interstitial_ad_unit" translatable="false">ca-app-pub-6412217023250030/4077168005</string>

    <string name="native_facebook" translatable="false">207441110073930_207441706740537</string>
    <string name="banner_facebook" translatable="false">207441110073930_207441706740537</string>
    <string name="interstitial_facebook" translatable="false">207441110073930_207441206740587</string>

    <string name="ko" translatable="false">한국어</string>
    <string name="ru" translatable="false">русский</string>
    <string name="es" translatable="false">Español</string>
    <string name="en" translatable="false">English</string>
    <string name="ar" translatable="false">العربية</string>
    <string name="de" translatable="false">Deutsche</string>
    <string name="language" translatable="false">Language</string>
    <string name="in" translatable="false">bahasa Indonesia</string>

    <string name="ad">AD</string>
    <string name="uhoh">Uh-oh…</string>
    <string name="cancel">Cancel</string>
    <string name="choose">Choose</string>
    <string name="rate_us">Rate us</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="no_thanks">No Thanks</string>
    <string name="tts_voice">TTS Voice</string>
    <string name="more_apps">More Apps</string>
    <string name="select_app">Select app</string>
    <string name="absolutely">Absolutely!</string>
    <string name="arrow_up">Arrow Up Icon</string>
    <string name="exit_app">Exit Application</string>
    <string name="design">By improving Design</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="select_language">Select Language</string>
    <string name="performance">By improving Performance</string>
    <string name="daily_notification">Daily Notification</string>
    <string name="type_your_feedback">Type your feedback…</string>
    <string name="personal_feedback">\nPersonal Feedback:\n</string>
    <string name="rating_dialog_header">Rating Dialog Header</string>
    <string name="functionality">By improving Functionality</string>
    <string name="notification_text">This is notification text</string>
    <string name="improve_design">Need to improve the Design.\n</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="improve_performance">Need to improve the Performance.\n</string>
    <string name="provide_valid_feedback">Please provide a valid Feedback!</string>
    <string name="improve_functionality">Need to improve the Functionality.\n</string>
    <string name="how_can_we_improve">How can we improve the experience?</string>
    <string name="are_you_sure_to_exit">Are you sure you want to exit the application?</string>
    <string name="enjoy_our_app">Enjoying our app? If its helpful for you please spread the word by rating us!</string>

</resources>
