<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="listener"
            type="com.thetamobile.starter.views.activities.FeedbackActivity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/submit">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:text="@string/how_can_we_improve"
                    android:textColor="@android:color/black" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/design"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:text="@string/design" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/functionality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:text="@string/functionality" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/performance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:text="@string/performance" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/feedbackLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/type_your_feedback"
                    android:padding="20dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/feedback"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </ScrollView>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:onClick="@{() -> listener.onSubmitClicked()}"
            android:text="@string/submit_feedback"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </RelativeLayout>

</layout>