<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="listener"
            type="com.thetamobile.starter.views.activities.MainActivity" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorLightGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ic_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:srcCompat="@drawable/ic_settings" />

        <TextView
            android:id="@+id/settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{()->listener.onSettingsClicked()}"
            android:text="@string/settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/ic_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_settings"
            app:layout_constraintTop_toTopOf="@+id/ic_settings" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ic_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings"
            app:srcCompat="@drawable/ic_feedback" />

        <TextView
            android:id="@+id/feedback"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{()->listener.onFeedbackClicked()}"
            android:text="@string/feedback"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/ic_feedback"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_feedback"
            app:layout_constraintTop_toTopOf="@+id/ic_feedback" />

        <TextView
            android:id="@+id/about_us"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/about_us"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feedback" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ic_more_apps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_us"
            app:srcCompat="@drawable/ic_more_apps" />

        <TextView
            android:id="@+id/more_apps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{()->listener.onMoreAppsClicked()}"
            android:text="@string/more_apps"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/ic_more_apps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_more_apps"
            app:layout_constraintTop_toTopOf="@+id/ic_more_apps" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ic_privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/more_apps"
            app:srcCompat="@drawable/ic_privacy_policy" />

        <TextView
            android:id="@+id/privacy_policy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{()->listener.onPrivacyPolicyClicked()}"
            android:text="@string/privacy_policy"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/ic_privacy_policy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_privacy_policy"
            app:layout_constraintTop_toTopOf="@+id/ic_privacy_policy" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/house_ad"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/privacy_policy" />


    </android.support.constraint.ConstraintLayout>

</layout>